Added CRUD for cards and decks

--- a/app/views/decks.html
+++ b/app/views/decks.html
@@ -1,41 +1,71 @@
-<div layout="column" style="width: 20%;">
-    <md-input-container>
-        <input type="text" ng-model="deck.name" placeholder="Name your deck...">
-    </md-input-container>
-    <md-input-container>
-        <label>Archetype</label>
-        <md-select ng-model="deck.archetype">
-            <md-optgroup ng-repeat="(category, names) in archetypes" label="{{category}}">
-                <md-option ng-repeat="name in names" ng-value="name">
-                    {{name}}
+<div layout="row">
+    <div flex="noshrink" layout="column" style="width: 20%;">
+        <md-input-container>
+            <input type="text" ng-model="deck.name" placeholder="Name your deck...">
+        </md-input-container>
+        <md-input-container>
+            <label>Archetype</label>
+            <md-select ng-model="deck.archetype">
+                <md-optgroup ng-repeat="(category, names) in archetypes" label="{{category}}">
+                    <md-option ng-repeat="name in names" ng-value="name">
+                        {{name}}
+                    </md-option>
+                </md-optgroup>
+            </md-select>
+        </md-input-container>
+        <md-input-container>
+            <label>Format</label>
+            <md-select ng-model="deck.format">
+                <md-option ng-repeat="format in formats" ng-value="format">
+                    {{format}}
                 </md-option>
-            </md-optgroup>
-        </md-select>
-    </md-input-container>
-    <md-input-container>
-        <label>Format</label>
-        <md-select ng-model="deck.format">
-            <md-option ng-repeat="format in formats" ng-value="format">
-                {{format}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-    <md-input-container>
-        <md-autocomplete md-selected-item="deck.colorCombo"
-                         md-items="combo in colorCombos | filter : searchText"
-                         md-item-text="combo.name"
-                         md-search-text="searchText"
-                         md-floating-label="Color Combo"
-                         md-min-length="0"
-                         id="colorCombo">
-            <md-item-template>
-                <img ng-repeat="color in combo.colors" ng-src="{{color}}">
-                <span>{{combo.name}}</span>
-            </md-item-template>
-        </md-autocomplete>
-    </md-input-container>
-    <div layout="row" layout-align="end center">
-        <md-button class="md-warn md-raised" ng-click="clearForm()">Clear Form</md-button>
-        <md-button class="md-primary md-raised" ng-click="saveDeck(deck)">Save Deck</md-button>
+            </md-select>
+        </md-input-container>
+        <md-input-container>
+            <md-autocomplete md-selected-item="deck.colorCombo"
+                             md-items="combo in colorCombos | filter : searchText"
+                             md-item-text="combo.name"
+                             md-search-text="searchText"
+                             md-floating-label="Color Combo"
+                             md-min-length="0"
+                             id="colorCombo">
+                <md-item-template>
+                    <img ng-repeat="color in combo.colors" ng-src="{{color}}">
+                    <span>{{combo.name}}</span>
+                </md-item-template>
+            </md-autocomplete>
+        </md-input-container>
+        <div layout="row" layout-align="end center">
+            <md-button class="md-warn md-raised" ng-click="clearForm()">Clear Form</md-button>
+            <md-button class="md-primary md-raised" ng-click="saveDeck(deck)">Save Deck</md-button>
+        </div>
+    </div>
+    <div class="centered" flex="grow" style="margin: 20px 20px 0 50px;">
+        <table ng-show="decks.length > 0">
+            <tr>
+                <th>Name</th>
+                <th>Archetype</th>
+                <th>Color Combo</th>
+                <th>Format</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+            <tr ng-repeat="deck in decks">
+                <td>{{deck.name}}</td>
+                <td>{{deck.archetype}}</td>
+                <td>{{deck.comboName}}</td>
+                <td>{{deck.format}}</td>
+                <td>
+                    <md-button ui-sref="cards" ng-click="editDeck(deck)" class="md-icon-button md-primary">
+                        <md-icon md-svg-icon="../images/ic_mode_edit_black_24px.svg"></md-icon>
+                    </md-button>
+                </td>
+                <td>
+                    <md-button ng-click="deleteDeck(deck.id)" class="md-icon-button md-warn">
+                        <md-icon md-svg-icon="../images/ic_delete_forever_black_24px.svg"></md-icon>
+                    </md-button>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
