--- a/app/views/cards.html
+++ b/app/views/cards.html
@@ -1,3 +1,7 @@
+<div layout="row" layout-align="space-between center" style="margin-right: 100px;">
+    <h1>Editing {{deck.name}}</h1>
+    <md-button ui-sref="decks" class="md-primary md-raised">Decks</md-button>
+</div>
 <md-content id="search" class="md-inline-form">
     <md-input-container id="cardSearch">
         <input type="text" ng-model="card.name" placeholder="Search by card name...">
@@ -13,7 +17,7 @@
                     <div>
                         <md-input-container>
                             <label>Quantity</label>
-                            <input ng-model="card.quantity" type="number" step="1" min="0">
+                            <input ng-model="card.newQuantity" type="number" step="1" min="0">
                         </md-input-container>
                         <span class="md-subhead"> In Deck</span>
                     </div>
@@ -23,12 +27,12 @@
             </md-card-title-text>
         </md-card-title>
         <md-card-content layout="row" layout-align="space-between">
-            <img src="{{card.imageUrl}}" >
+            <img src="{{card.imageUrl}}">
             <p flex style="padding-left: 20px;">{{card.text}}</p>
         </md-card-content>
         <md-card-actions id="actionButtons" layout="row" layout-align="end center">
-            <md-button class="md-raised md-warn">Remove All</md-button>
-            <md-button class="md-raised md-primary">Add {{card.quantity}} Cards</md-button>
+            <md-button ng-click="removeCards(card)" class="md-raised md-warn">Remove All</md-button>
+            <md-button ng-click="addCards(card, card.newQuantity)" class="md-raised md-primary">Add {{card.newQuantity}} Cards</md-button>
         </md-card-actions>
     </md-card>
 </md-content>
