Fixed a problem with sorting by newQuantity
The variable newQuantity will sort immediately because it's
used to change the card count with the quantity selector. The cards
were disappearing to somewhere else in the list due to adjustments to
quantity.

--- a/app/views/cards.html
+++ b/app/views/cards.html
@@ -9,7 +9,7 @@
     <md-button class="md-primary" ng-click="searchByName(card.name)">Search</md-button>
 </md-content>
 <md-content id="searchResults">
-    <md-card md-theme ng-repeat="card in cardResults | orderBy: ['-newQuantity', 'name']" class="mtgCard">
+    <md-card md-theme ng-repeat="card in cardResults | orderBy: ['-quantity', 'name']" class="mtgCard">
         <md-card-title>
             <md-card-title-text>
                 <div layout-align="space-between center" layout="row">
